# bigfile

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: bigfile.h  bigfile.hpp
include/bigfile/: ArchiveType.h  BigArchive.h  RefPack.h  UInt24.h  UtilityFunctions.h  archive_type.h  archive_type.hpp  big_archive.h  big_archive.hpp  endian_detection.h  refpack.h  span.h  structures.hpp  types.h  utility_functions.h  utility_functions.hpp
include/bigfile/impl/: big_archive.hpp  structures.hpp  utility_functions.hpp
include/bigfile/structs/: BigStructs.h
include/bigfile/structures/: bigf.h  bigf.hpp  cofb.h  cofb.hpp
src/: BigArchive.cpp  RefPack.cpp  SeekyWheelyAutomobiley.h  UtilityFunctions.cpp  big_archive.cpp  bigarchive_impl.cpp  bigextract.cpp  bigpaths.cpp  refpack.cpp  structures.cpp  utility_functions.cpp
src/bigfile/: BigArchive.cpp  CMakeLists.txt  RefPack.cpp  SeekyWheelyAutomobiley.h
src/bigfile/ops/: README.md  ReadFileOp.cpp  ReadFileOp.h  ReadHeaderAndTocOp.cpp  ReadHeaderAndTocOp.h  WriteHeaderOp.h
src/compile_as_library/: bigfile.cpp
src/examples/: CMakeLists.txt  bigextract.cpp  biginfo.cpp  bigpaths.cpp
src/ops/: ReadFileOp.h  ReadHeaderAndTocOp.h
src/programs/: CMakeLists.txt  bigextract.cpp  biginfo.cpp
src/structs/: bigf.h  cofb.h
